# Lynx

./: .gitignore  CMakeLists.txt  CppProperties.json  Makefile  README.md  SimpleGameEngine.sln  SimpleGameEngine.vcxproj  SimpleGameEngine.vcxproj.filters  build_LINUX.sh  example.cpp  game.cpp  imgui.ini  main  main.cpp  makefile  shader.cpp  shader.h  texture.cpp  texture.h
EngineModules/Physics/: CMakeLists.txt  lynxPhysics.cpp  physicsObject.h  physicsSystem.cpp  physicsSystem.h
EngineModules/TestModule/: CMakeLists.txt  testModule.cpp
LynxEditor/: CMakeLists.txt
LynxEditor/src/: editorwindow.ui  enginedisplay.cpp  enginedisplay.h  main.cpp
LynxEngine/: CMakeLists.txt  LynxEngine.sln  LynxEngine.vcxproj  LynxEngine.vcxproj.filters  lynxEngine.h
LynxEngine/src/: LYNX_COMMON.H  lynx.h
LynxEngine/src/Core/: application.cpp  application.h  assert.h  event.cpp  event.h  eventManager.cpp  eventManager.h  inputManager.cpp  inputManager.h  logger.cpp  logger.h  memman.h  module.cpp  module.h  moduleInterface.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  simpleGameEngine.cpp  simpleGameEngine.h  threadpool.cpp  threadpool.h  windowManager.cpp  windowManager.h
LynxEngine/src/ECS/: componentArray.h  componentManager.h  components.h  systemManager.h
LynxEngine/src/Editor/: editor.cpp  editor.h
LynxEngine/src/Events/: event.cpp  event.h  joystickEvent.h  keyEvent.h  mouseEvent.h  windowEvent.h
LynxEngine/src/Graphics/: buffers.cpp  buffers.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  elementBuffer.cpp  elementBuffer.h  grid.cpp  grid.h  mesh.cpp  mesh.h  model.cpp  model.h  perspectiveCamera.cpp  perspectiveCamera.h  renderAPI.cpp  renderer.h  renderer2D.cpp  renderer2D.h  renderer3D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
LynxEngine/src/Scripting/: luaAPI_core.cpp  luaAPI_events.cpp  luaAPI_scene.h  luaCommon.h  luaRuntime.cpp  luaRuntime.h
LynxEngine/src/Systems/: cameraSystem.cpp  cameraSystem.h  lightingSystem.h  parentingSystem.cpp  parentingSystem.h  physicsSystem.cpp  physicsSystem.h  renderSystem.cpp  renderSystem.h
LynxEngine/src/Utils/: path.hpp
examples/game/: CMakeLists.txt  game.cpp  nogl.supp
lib/: CMakeLists.txt  assimp.lib
src/: CMakeLists.txt  camera.cpp  cameraSystem.cpp  componentArray.cpp  componentManager.cpp  coordinator.cpp  debug.cpp  editor.cpp  elementBuffer.cpp  entityManager.cpp  logger.c  logger.cpp  lynx_common.h  main.cpp  mesh.cpp  model.cpp  object.cpp  parentingSystem.cpp  physicsSystem.cpp  renderSystem.cpp  renderer.cpp  resourceManager.cpp  scene.cpp  shader.cpp  simpleGameEngine.cpp  sprite.cpp  systemManager.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/Core/: application.cpp  application.h  assert.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  event_manager.cpp  event_manager.h  input.cpp  input.h  keys.h  logger.cpp  logger.h  module.cpp  module.h  octree.cpp  octree.h  package.cpp  package.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  threadpool.cpp  threadpool.h  window_manager.cpp  window_manager.h
src/Demo/: CMakeLists.txt  demo.cpp  demo.h  demo_scene.hpp  input.cpp  input.h  input.hpp  main.cpp
src/EngineModules/Physics/: CMakeLists.txt  physicsObject.h  physicsSystem.cpp  physicsSystem.h  physicsWorld.cpp  physicsWorld.h
src/EngineModules/TestModule/: CMakeLists.txt  testModule.cpp
src/Events/: async.h  event.cpp  mouseEvent.h
src/Graphics/: buffers.cpp  buffers.h  camera.cpp  camera.h  cube.cpp  cube.h  draw.cpp  draw.h  gl_buffers.cpp  gl_buffers.h  gl_graphics_api.cpp  gl_graphics_api.h  gl_shader.cpp  gl_vertex_array.cpp  gl_vertex_array.h  graphics_api.cpp  graphics_api.h  grid.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.h  renderer_forward.cpp  renderer_forward.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/LynxEditor/: CMakeLists.txt  editorwindow.cpp  editorwindow.h
src/LynxEngine/: CMakeLists.txt  lynx.h  lynx_common.h
src/LynxEngine/Core/: application.cpp  application.h  assert.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  eventManager.cpp  eventManager.h  event_manager.cpp  event_manager.h  input.cpp  input.h  inputManager.cpp  inputManager.h  logger.cpp  logger.h  memman.cpp  memman.h  module.cpp  module.h  octree.cpp  package.cpp  resource.cpp  resource.h  resourceManager.cpp  resourceManager.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  threadpool.cpp  windowManager.cpp  windowManager.h  window_manager.cpp  window_manager.h
src/LynxEngine/Events/: async.h  event.cpp  event.h  joystickEvent.h  keyEvent.h
src/LynxEngine/Graphics/: buffers.cpp  buffers.h  camera.cpp  camera.h  cube.cpp  cubemap.cpp  cubemap.h  debug.h  draw.cpp  draw.h  font.cpp  font.h  graphics_api.cpp  graphics_api.h  grid.cpp  grid.h  lighting.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.h  renderer2D.cpp  renderer2D.h  rendererAPI.cpp  rendererAPI.h  renderer_forward.cpp  renderer_forward.h  shader.cpp  shader.h  skybox.cpp  skybox.h  terrain.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertex_array.h
src/LynxEngine/Physics/: physics_object.cpp  physics_object.h
src/LynxEngine/Scripting/: luaAPI_core.cpp  luaAPI_core.h  luaAPI_events.h  luaAPI_scene.cpp  luaRuntime.cpp  luaRuntime.h  lua_core.h  lua_events.h  lua_runtime.h  lua_scene.cpp
src/LynxEngine/Systems/: cameraSystem.cpp  cameraSystem.h  lightingSystem.h  parentingSystem.h  renderSystem.cpp  renderSystem.h  transformSystem.cpp  transformSystem.h
src/LynxEngine/Utils/: colour.cpp  path.hpp  term.cpp  (+1 more)
src/LynxPhysics/: CMakeLists.txt  physics_ent.h  physics_module.cpp  physics_world.cpp  physics_world.h
src/Math/: common.h
src/Physics/: physics_object.cpp  physics_object.h
src/Scripting/: lua_core.cpp  lua_events.cpp  lua_runtime.cpp  lua_scene.h
src/Utils/: path.hpp  term.cpp  term.h
(+143 files in other folders)
